2000-11-03  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox.c: changed 'sent..' log event to clearly state that it
	only means that the message was sent to bearerbox, not further

2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* checks/check_list.c: Fixed synchronization problems that
	occasionally caused it to randomly fail. The list code itself
	was OK, but the checking code did not synchronize thread startups
	correctly.

2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* test/test_http.c: Change the error message when there are
	no command line arguments from "Floating point exception (core
	dumped)" to the standard help text.

2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* test/test_http_server.c: Converted to use the new HTTP server
	interface. This displayed bugs in shutdown situations for the
	new HTTP code.
	
	* gwlib/http.c: Fixed bugs in shutting down.

2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* test/test_http_server.c: Reformatted to coding style.

2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.[ch]: First cut at changing the HTTP server side
	interface to be more sensible about the number of threads. Doesn't
	work quite well yet (i.e., if I change test/test_http_server.c,
	make check fails), but I want it committed for now. Shouldn't
	harm anyone, as long as they don't use it.

2000-11-02  Paul Keogh  <paul.keogh@anam.com>

	* gw/cookies.c: Fix for some cookie management bugs.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gwlib/gwthread-pthread.c: Fix memory leak if poll() was
	interrupted.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gw/smsc_emi.c: Cleaned up a bit, made thread-safe.

	* gw/smsc_p.h, gw/smsc.c: Declare and initialize new EMI fields.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: Make octstr_read_file use a smaller buffer,
	to reduce stack usage.

2000-11-01  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Implement magic URL kannel:alive, based on
	patch from Neil Hunter.
