@@ -1,3 +1,13 @@
+2000-11-03  Richard Braakman  <dark@wapit.com>
+
+        * gw/wsp_headers.c: If an Expires header has an invalid date, then
+        encode it as a date far in the past.  We can't just skip the header
+        because RFC2068 says such a response should be treated as already
+        expired, and we have to tell the client to do that.
+
+        * gw/wsp_headers.c: Make sure that a Multi-octet-integer is always
+        at least one octet long, even if its value is 0.
+      
 2000-11-03  Kalle Marjola  <rpr@wapit.com>
 
 	* gw/smsbox.c: changed 'sent..' log event to clearly state that it
